Log of connection/disconnection of the kettle. Broadcast on connect disconnect for the UI. Timeout in CupsActivity Log of failures of the game